--- a/dav_svn.conf
+++ b/dav_svn.conf
@@ -5,5 +5,6 @@
 	Require valid-user
 	AuthUserFile /etc/svn/svn-passwd
 	AuthzSVNAccessFile /etc/svn/svn-access
+	LimitRequestBody 0
 	SVNPath /var/svn/repos
 </Location>
