--- a/dav_svn.conf
+++ b/dav_svn.conf
@@ -6,5 +6,6 @@
 	AuthUserFile /etc/svn/svn-passwd
 	AuthzSVNAccessFile /etc/svn/svn-access
 	LimitRequestBody 0
+	LimitXMLRequestBody 8000000
 	SVNPath /var/svn/repos
 </Location>
